[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Towers/towerDefense_tile180.png" type="Texture" id=1]
[ext_resource path="res://Assets/Towers/towerDefense_tile228.png" type="Texture" id=2]
[ext_resource path="res://Assets/Towers/towerDefense_tile251.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Turrets/MissileT1.gd" type="Script" id=4]
[ext_resource path="res://Assets/Towers/missile-blast-2-95177.mp3" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[sub_resource type="Animation" id=2]
resource_name = "Fire"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("Turret/Missile1:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.002, 0.003, 0.1, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, true, true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Turret/Missile2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 5.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("Turret/AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0, 3 )
}

[node name="MissileT1" type="Node2D"]
script = ExtResource( 4 )

[node name="Base" type="Sprite" parent="."]
position = Vector2( 32, 32 )
texture = ExtResource( 1 )

[node name="Turret" type="Sprite" parent="."]
position = Vector2( 32, 32 )
texture = ExtResource( 2 )

[node name="Missile1" type="Sprite" parent="Turret"]
texture = ExtResource( 3 )
offset = Vector2( 5, -10 )

[node name="Missile2" type="Sprite" parent="Turret"]
texture = ExtResource( 3 )
offset = Vector2( 5, 10 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Turret"]
stream = ExtResource( 5 )

[node name="Range" type="Area2D" parent="."]
position = Vector2( 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fire = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
